PasswordService uses org.postgresql.util.Base64 now