@@ -4,9 +4,8 @@ import java.io.UnsupportedEncodingException;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 
-import sun.misc.BASE64Encoder;
+import org.postgresql.util.Base64;
 
-@SuppressWarnings("restriction")
 public final class PasswordService {
 	private static PasswordService instance;
 
@@ -38,7 +37,6 @@ public final class PasswordService {
 		md = MessageDigest.getInstance("SHA");
 		md.update(plaintext.getBytes("UTF-8"));
 		byte raw[] = md.digest();
-		String hash = (new BASE64Encoder()).encode(raw);
-		return hash; // step 6
+		return Base64.encodeBytes(raw);
 	}
 }
